--- a/Standard/dol-diff.tex
+++ b/Standard/dol-diff.tex
@@ -3866,7 +3866,7 @@ large specification.} \DIFaddend
 *@ \DIFaddbegin \DIFadd{spec Int = 
   Nat
 then 
-     generated type Int ::= __ - __(Nat;Nat)
+     generated type Int ::= \_\_ - \_\_(Nat;Nat)
      forall a,b,c,d: Nat
      .  a - b = c - d <=> a + d = c + b    
      sort  Nat < Int
@@ -3878,8 +3878,8 @@ end
   Nat 
 then 
   sort Elem
-  free type List ::=  } \DIFaddend @* [] *@ \DIFaddbegin \DIFadd{|  __ :: __ (Elem; List)
-     op   $\#$__: List -> Nat;
+  free type List ::=  } \DIFaddend @* [] *@ \DIFaddbegin \DIFadd{|  \_\_ :: \_\_ (Elem; List)
+     op   $\#$\_\_: List -> Nat;
      forall x,: Elem; L: List
      . $\#$ }[] \DIFadd{= 0                              %DIF > (numberOf_nil_List)%
      . $\#$ (x :: L) = suc( $\#$ L )               %DIF > (numberOf_NeList_List)%
