Removed: * (pg 134, 140), @ (pg 145)

--- a/Standard/dol-diff.tex
+++ b/Standard/dol-diff.tex
@@ -13991,17 +13991,17 @@ combine NetworkElements  & Alignments, Publications \\\hline
          ser:   <http://purl.net/DOL/serializations/> )%
                 %% ... and serializations
 
- *@ \DIFaddbegin \DIFadd{library PropositionalExamples
+ @ \DIFaddbegin \DIFadd{library PropositionalExamples
 }
 
-\DIFaddend @*  %% non-standard serialization built into Hets: 
-logic log:Propositional  *@ \DIFdelbegin \DIFdel{syntax ser:Prop}\DIFdelend @*   *@ \DIFaddbegin \DIFadd{serialization ser:Propositional}\DIFaddend @*  /Hets       
+\DIFaddend @  %% non-standard serialization built into Hets: 
+logic log:Propositional  @ \DIFdelbegin \DIFdel{syntax ser:Prop}\DIFdelend @   @ \DIFaddbegin \DIFadd{serialization ser:Propositional}\DIFaddend @  /Hets       
 
- *@ \DIFdelbegin \DIFdel{library PropositionalExamples
+ @ \DIFdelbegin \DIFdel{library PropositionalExamples
 }%DIFDELCMD < 
 
 %DIFDELCMD < %%%
-\DIFdelend @*  oms Consistent = %consistent
+\DIFdelend @  oms Consistent = %consistent
   props A, B
   . A => B
 end
@@ -14019,17 +14019,17 @@ end
 entailment Ent = SingleModel entails { . not ( A=>B ) }
 end
 
-%DIF > % repeat prefix declarations from above
- *@ \DIFaddbegin 
+% repeat prefix declarations from above
+@ \DIFaddbegin 
 
-\DIFaddend @*  library PropositionalMereology
+\DIFaddend @  library PropositionalMereology
 
 %% non-standard serialization built into Hets: 
-logic log:Propositional  *@ \DIFdelbegin \DIFdel{syntax ser:Prop}\DIFdelend @*   *@ \DIFaddbegin \DIFadd{serialzation ser:Propositional}\DIFaddend @*  /Hets
+logic log:Propositional  @ \DIFdelbegin \DIFdel{syntax ser:Prop}\DIFdelend @   @ \DIFaddbegin \DIFadd{serialzation ser:Propositional}\DIFaddend @  /Hets
 
 %% basic taxonomic information about mereology reused from DOLCE:
 ontology Taxonomy = %DIF < conssistent      
-  %DIF > consistent
+   consistent
   props PT, T, S, AR, PD
   . S $\vee$ T $\vee$ AR $\vee$ PD $\longrightarrow$ PT          %% PT is the top concept
   . S $\wedge$  T  $\longrightarrow$ $\bot$                  %% PD, S, T, AR are pairwise disjoint
@@ -14457,7 +14457,7 @@ library Market
 
 language lang:OWL2 logic log:SROIQ  @ \DIFdelbegin \DIFdel{syntax }\DIFdelend @   @ \DIFaddbegin \DIFadd{serialization }\DIFaddend @  ser:OWL2/Manchester
  @ \DIFdelbegin \DIFdel{ontology Purchases }\DIFdelend @
- *@ \DIFaddbegin 
+ @ \DIFaddbegin 
 \DIFadd{ontology One }\DIFaddend @  =  @ \DIFdelbegin \DIFdel{combine
   1 : }%DIFDELCMD < { %%%
 \DIFdelend @  
@@ -14847,7 +14847,7 @@ then \\ %DIF > def
            \_\_ >= \_\_, \_\_ > \_\_: Elem * Elem; \\
   forall x,y:Elem \\
      . }
-     \DIFaddend @  x  @ \DIFaddbegin \DIFadd{>= y <=> y <= x  \\                 %DIF > (geq_def_ExtPartialOrder)%
+     \DIFaddend   x   \DIFaddbegin \DIFadd{>= y <=> y <= x  \\                 %DIF > (geq_def_ExtPartialOrder)%
      . x < y <=> (x <= y /}\ \DIFadd{not (x=y))     %DIF > (less_def_ExtPartialOrder)%
      . x > y <=> y < x    \\                 %DIF > (greater_def_ExtPartialOrder)%
   forall x,y: Elem \\
@@ -14861,13 +14861,13 @@ end \\
 %DIF > % real numbers, using a specification of fields
 \DIFadd{language lang:HasCASL \\
 spec Real = \\
-     RichOrderedField with Elem }\DIFaddend @  |->  @ \DIFdelbegin \DIFdel{max
+     RichOrderedField with Elem }\DIFaddend   |->   \DIFdelbegin \DIFdel{max
 end \\
-result MyResult }\DIFdelend @   @ \DIFaddbegin \DIFadd{Real
+result MyResult }\DIFdelend     \DIFaddbegin \DIFadd{Real
 then \\
-  free type Nat ::}\DIFaddend @  =  @ \DIFdelbegin \DIFdel{MySubst for MyQuery
-}\DIFdelend @   
-@ \DIFaddbegin \DIFadd{0 | suc Nat \\
+  free type Nat ::}\DIFaddend   =   \DIFdelbegin \DIFdel{MySubst for MyQuery
+}\DIFdelend    
+ \DIFaddbegin \DIFadd{0 | suc Nat \\
   ops \_\_<=\_\_ :     Pred(Real * Pred(Real)); \\
       \_\_<=\_\_ :     Pred(Pred(Real) * Real); \\
       isBounded : Pred(Pred(Real)); \\
@@ -14901,7 +14901,7 @@ then \\
 end \\
 }
 
-\DIFaddend @ 
+\DIFaddend 
 \end{lstlisting}
 
 
