--- a/Standard/dol-diff.tex
+++ b/Standard/dol-diff.tex
@@ -14166,16 +14166,8 @@ end             %% an atom has no proper parts
 %% translate the logic, then rename the entities
 interpretation TaxonomyToParthood : Taxonomy to BasicParthood =
   translation trans:PropositionalToSROIQ,
-  PT  
-  @ \DIFdelbegin \DIFdel{$\mapsto$ }\DIFdelend @   
-  @ \DIFaddbegin \DIFadd{|-> }\DIFaddend @  Particular,   S  
-  @ \DIFdelbegin \DIFdel{$\mapsto$ }\DIFdelend @   
-  @ \DIFaddbegin \DIFadd{|-> }\DIFaddend @  SpaceRegion,
-  T   
-  @ \DIFdelbegin \DIFdel{$\mapsto$ }\DIFdelend @   
-  @ \DIFaddbegin \DIFadd{|-> }\DIFaddend @  TimeInterval, A  
-  @ \DIFdelbegin \DIFdel{$\mapsto$ AbstractRegion , }\DIFdelend @   
-  @ \DIFaddbegin \DIFadd{|-> AbstractRegion }\DIFaddend @  %[ and so on ]%
+  PT |-> Particular,   S |->SpaceRegion,
+  T  |-> TimeInterval, A |-> AbstractRegion   %[ and so on ]%
   @ \DIFaddbegin \DIFadd{end
 }\DIFaddend @
 
@@ -14233,11 +14225,8 @@ library Persons
 language lang:OWL
 
 ontology Persons =
-  Class @ \DIFdelbegin \DIFdel{Person
-  Class }\DIFdelend @   
-  @ \DIFaddbegin \DIFadd{: Person
-  Class: }\DIFaddend @  
-  Female
+  Class: Person
+  Class: emale
 then 
   Class: Woman  EquivalentTo: Person and Female
 end
