--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -19,8 +19,9 @@
 %%\pdfcommentfalse
 
 
+%\documentclass[10pt, a4paper]{isov2} 
+%\documentclass[10pt, letterpaper]{isov2} 
 \documentclass[10pt, a4paper]{isov2} 
-%\documentclass[10pt, a4paper, wd]{isov2} 
 
 %% Cleaning up things that isov2 gets wrong
 \makeatletter
@@ -105,7 +106,7 @@
 \usepackage{stringstrings}
 \usepackage{stmaryrd}
 \usepackage[inline]{enumitem}
-
+\usepackage{setspace}
 
 %% Graphics
 \usepackage{standalone}
@@ -122,6 +123,7 @@
 \lstset{basicstyle=\ttfamily\small,columns=fixed}
 \usepackage{lstsemantic}
 \usepackage{algorithmic}
+
 
 %% linguistics
 \usepackage{xspace}
@@ -461,7 +463,8 @@ author=,date=,id=,replyto=,type=}{}%
 \renewcommand{\pref}[1]{\pagerefname~\pageref{#1}}
 \newcommand{\rtm}[0]{\small{\textregistered\xspace}}
 \newcommand{\OMGparagraph}[1]{
-\vspace{3pt}
+\vspace{23pt}
+%\bigskip
 {\centerline {#1}}
 \vspace{3pt}
 }
@@ -550,13 +553,12 @@ author=,date=,id=,replyto=,type=}{}%
 \pagestyle{headings}  %%% switches on printing of running heads
 
 \begin{flushright}
-  Date: \today
-
+  \textbf{Date:} January 2016 
 \end{flushright}
 
 \begin{flushleft}
-  \begin{figure}
-    \includegraphics{omglogo.jpeg}
+  \begin{figure}[h]
+    \includegraphics[width=196pt]{OMG-logo-2015.pdf}
  \end{figure}
  
 \bigskip\bigskip
@@ -564,34 +566,45 @@ author=,date=,id=,replyto=,type=}{}%
 \bigskip\bigskip
 
 \bigskip
-{\fontsize{30}{36}\selectfont The Distributed Ontology, Modeling, and Specification Language (DOL)}
+\textsf{\fontsize{20}{20}\selectfont{}The Distributed Ontology, Modeling, and Specification Language (DOL)}
 
 
 \bigskip
 
-Version \version %DIFDELCMD < 
+\textsf{\textit{\fontsize{16}{16}\selectfont{}FTF -- Beta}}
+%Version \version %DIFDELCMD < 
 
 
-\bigskip\bigskip\bigskip\bigskip\bigskip\bigskip\
+\bigskip\bigskip\bigskip
 
 
 
 \vskip\medskipamount %%% or other desired dimension
-\leaders\vrule width \textwidth\vskip2pt %%% or other desired thickness
+\leaders\vrule width \textwidth\vskip1pt %%% or other desired thickness
 \vskip 6pt 
 \nointerlineskip
-
-OMG Document Number: ad/2015-10-01   \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
-%Normative reference: \\
-Machine readable files: \\ 
-Normative:  ad/2015-10-02\\
-Informative: ad/2015-10-03\\
- 
+\begin{onehalfspace}
+\textsf{\textbf{OMG Document Number:}}    \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
+\textsf{\textbf{Standard document URL: \ \url{http://www.omg.org/spec/DOL/1.0/PDF}}} \\
+\textsf{\textbf{Machine Consumable File(s): \\ 
+\leftskip2em Normative:  \\
+\url{http://www.omg.org/spec/DOL/20151109/DOL-metamodel.xmi}\\
+Informative: \\
+\url{http://www.omg.org/spec/DOL/20151109/DOL-terms.rdf} \\}}
+\end{onehalfspace} 
 
 \vskip 28pt
-\leaders\vrule width \textwidth\vskip2pt % or other desired thickness
+\leaders\vrule width \textwidth\vskip1pt % or other desired thickness
 \vskip\medskipamount % ditto
 \nointerlineskip
+
+This OMG document replaces the submission document (ad/2015-10-01). It is an OMG Adopted Beta specification and is currently in the finalization phase. Comments on the content of this document are welcome, and should be directed to \url{issues@omg.org} by March 28, 2016. 
+
+You may view the pending issues for this specification from the OMG revision issues web page %http://www.omg.org/issues/
+\url{http://issues.omg.org/browse/DOL}.
+
+The FTF Recommendation and Report for this specification will be published on September 23, 2016. If you are reading this after that date, please download the available specification from the OMG Specifications Catalog.
+
 \end{flushleft}
 
 
@@ -613,85 +626,92 @@ Copyright \copyright 2014-15, Athan Services \\
 
 
 \OMGparagraph{USE OF SPECIFICATION - TERMS, CONDITIONS \& NOTICES}
-The material in this document details an Object Management Group specification
- in accordance with the terms, conditions and notices set forth below. This
-  document does not represent a commitment to implement any portion of this
-   specification in any company's products. The information contained in this
-   document is subject to change without notice.
+The material in this document details an Object Management Group specification in accordance with
+ the terms, conditions and notices set forth below. This document does not represent a commitment
+  to implement any portion of this specification in any company's products. The information
+   contained in this document is subject to change without notice.
 
 
 \OMGparagraph{LICENSES}
-The companies listed above have granted to the Object Management Group, Inc.
- (OMG) a nonexclusive, royalty-free, paid up, worldwide license to copy and
- distribute this document and to modify this document and distribute copies of
-  the modified version. Each of the copyright holders listed above has agreed
-that no person shall be deemed to have infringed the copyright in the
-included material of any such copyright holder by reason of having used the
-specification set forth herein or having conformed any computer software to the
- specification.
-Subject to all of the terms and conditions below, the owners of the copyright  in this
-specification hereby grant you a fully-paid up, non-exclusive, nontransferable, perpetual,
-worldwide license (without the right to
-sublicense), to use this specification to create and distribute software and special 
-purpose specifications that are based upon this specification, and to use, copy, and distribute 
-this specification as provided under the Copyright Act; provided that: (1) both the copyright
-notice identified above and this permission notice appear on any copies of this specification; (2)
-the use of the specifications is  for informational purposes and will not be copied or
-posted on any network computer or broadcast in any media and will not be 
-otherwise resold or transferred for commercial purposes; and (3) no modifications are made to this
-specification. This limited permission automatically terminates without notice if you breach any of
-these terms or conditions. Upon termination, you will destroy immediately any copies of the
-specifications in your possession or control.
+The companies listed above have granted to the Object Management Group, Inc. (OMG) a nonexclusive,
+ royalty-free, paid up, worldwide license to copy and distribute this document and to modify this 
+  document and distribute copies of the modified version. Each of the copyright holders listed 
+   above has agreed that no person shall be deemed to have infringed the copyright in the included 
+    material of any such copyright holder by reason of having used the specification set forth 
+	 herein or having conformed any computer software to the specification.
+
+Subject to all of the terms and conditions below, the owners of the copyright in this specification 
+hereby grant you a fully-paid up, non-exclusive, nontransferable, perpetual, worldwide license 
+ (without the right to sublicense), to use this specification to create and distribute software and 
+  special purpose specifications that are based upon this specification, and to use, copy, and 
+distribute this specification as provided under the Copyright Act; provided that: (1) both the 
+ copyright notice identified above and this permission notice appear on any copies of this 
+  specification; (2) the use of the specifications is for informational purposes and will not be 
+copied or posted on any network computer or broadcast in any media and will not be otherwise resold 
+ or transferred for commercial purposes; and (3) no modifications are made to this specification. 
+This limited permission automatically terminates without notice if you breach any of these terms or 
+ conditions. Upon termination, you will destroy immediately any copies of the specifications in 
+  your possession or control.
+
 
 
 \OMGparagraph{PATENTS}
-The attention of adopters is directed to the possibility that compliance with or adoption of OMG specifications may require use of an invention covered by patent rights. OMG shall not be responsible for identifying patents for which a
- license may be required by any OMG specification, or for conducting legal inquiries into the legal validity or scope of those patents that are brought to its attention. OMG specifications are prospective and advisory only.
-  Prospective users are responsible for protecting themselves against liability for infringement of patents.
+The attention of adopters is directed to the possibility that compliance with or adoption of OMG 
+ specifications may require use of an invention covered by patent rights. OMG shall not be 
+  responsible for identifying patents for which a license may be required by any OMG specification, 
+   or for conducting legal inquiries into the legal validity or scope of those patents that are 
+    brought to its attention. OMG specifications are prospective and advisory only. Prospective 
+	 users are responsible for protecting themselves against liability for infringement of patents.
 
 \OMGparagraph{GENERAL USE RESTRICTIONS}
-Any unauthorized use of this specification may violate copyright laws, trademark laws, and communications regulations and statutes. This document contains information which is protected by copyright. All Rights Reserved. No
-part of this work covered by copyright herein may be reproduced or used in any form or by any means--graphic, electronic, or mechanical, including
- photocopying, recording, taping, or information storage and retrieval systems--without permission of the copyright owner.
+Any unauthorized use of this specification may violate copyright laws, trademark laws, and 
+ communications regulations and statutes. This document contains information which is protected by 
+  copyright. All Rights Reserved. No part of this work covered by copyright herein may be 
+   reproduced or used in any form or by any means--graphic, electronic, or mechanical, including 
+    photocopying, recording, taping, or information storage and retrieval systems--without 
+	 permission of the copyright owner.
 
-
+\newpage
 \OMGparagraph{DISCLAIMER OF WARRANTY}
-WHILE THIS PUBLICATION IS BELIEVED TO BE ACCURATE, IT IS PROVIDED ``AS IS'' AND MAY CONTAIN ERRORS OR MISPRINTS. THE OBJECT MANAGEMENT GROUP AND THE COMPANIES LISTED ABOVE MAKE NO WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, WITH REGARD TO THIS PUBLICATION, INCLUDING BUT NOT LIMITED TO ANY WARRANTY OF TITLE OR OWNERSHIP, IMPLIED WARRANTY OF MERCHANTABILITY OR WARRANTY OF FITNESS FOR A PARTICULAR PURPOSE OR USE. 
-IN NO EVENT SHALL THE OBJECT MANAGEMENT GROUP OR ANY OF THE COMPANIES LISTED ABOVE BE LIABLE FOR ERRORS CONTAINED HEREIN OR FOR DIRECT, INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, RELI\-ANCE OR COVER DAMAGES, INCLUDING LOSS
- OF PROFITS, REVENUE, DATA OR USE, INCURRED BY ANY USER OR ANY THIRD PARTY IN CONNECTION WITH THE FURNISHING, PERFORMANCE, OR USE OF THIS MATERIAL, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. 
+WHILE THIS PUBLICATION IS BELIEVED TO BE ACCURATE, IT IS PROVIDED "AS IS" AND MAY CONTAIN ERRORS OR MISPRINTS. THE OBJECT MANAGEMENT GROUP AND THE COMPANIES LISTED ABOVE MAKE NO WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, WITH REGARD TO THIS PUBLICATION, INCLUDING BUT NOT LIMITED TO ANY WARRANTY OF TITLE OR OWNERSHIP, IMPLIED WARRANTY OF MERCHANTABILITY OR WARRANTY OF FITNESS FOR A PARTICULAR PURPOSE OR USE. IN NO EVENT SHALL THE OBJECT MANAGEMENT GROUP OR ANY OF THE COMPANIES LISTED ABOVE BE LIABLE FOR ERRORS CONTAINED HEREIN OR FOR DIRECT, INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, RELIANCE OR COVER DAMAGES, INCLUDING LOSS OF PROFITS, REVENUE, DATA OR USE, INCURRED BY ANY USER OR ANY THIRD PARTY IN CONNECTION WITH THE FURNISHING, PERFORMANCE, OR USE OF THIS MATERIAL, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
 
-The entire risk as to the quality and performance of software developed using this specification is borne by you. This disclaimer of warranty constitutes an
- essential part of the license granted to you to use this specification.
+
+The entire risk as to the quality and performance of software developed using this specification is borne by you. This disclaimer of warranty constitutes an essential part of the license granted to you to use this specification.
 
 
 \OMGparagraph{RESTRICTED RIGHTS LEGEND}
-Use, duplication or disclosure by the U.S. Government  is subject to the restrictions set forth in subparagraph (c) (1) (ii) of The Rights in Technical Data and Computer Software Clause at DFARS 252.227-7013 or in subparagraph
- (c)(1) and (2) of the Commercial Computer Software - Restricted Rights clauses at 48 C.F.R. 52.227-19 or as specified in 48 C.F.R. 227-7202-2 of the DoD F.A.R. Supplement and its successors, or as specified in 48 C.F.R. 12.212 of
-  the Federal Acquisition Regulations and its successors, as applicable. The specification copyright owners are as indicated above and may be contacted through the Object Management Group, 140 Kendrick Street, Needham, MA 02494, U.S.A.
+Use, duplication or disclosure by the U.S. Government is subject to the restrictions set forth in 
+ subparagraph (c) (1) (ii) of The Rights in Technical Data and Computer Software Clause at DFARS 
+  252.227-7013 or in subparagraph (c)(1) and (2) of the Commercial Computer Software - Restricted 
+   Rights clauses at 48 C.F.R. 52.227-19 or as specified in 48 C.F.R. 227-7202-2 of the DoD F.A.R. 
+    Supplement and its successors, or as specified in 48 C.F.R. 12.212 of the Federal Acquisition 
+ Regulations and its successors, as applicable. The specification copyright owners are as 
+ indicated above and may be contacted through the Object Management Group, 109 Highland 
+ Avenue, Needham, MA 02494, U.S.A.
   
 
 
 \OMGparagraph{TRADEMARKS}
-MDA\rtm, Model Driven Architecture\rtm, UML\rtm, UML Cube logo\rtm, OMG Logo\rtm, COR\-BA\rtm\ and XMI\rtm\ are registered trademarks of the Object Management Group, Inc., and Object Management Group\texttrademark\xspace, OMG\texttrademark\xspace , Unified Modeling Language\texttrademark\xspace, Model Driven Architecture Logo\texttrademark\xspace, Model Driven Architecture Diagram\texttrademark\xspace, CORBA logos\texttrademark\xspace, XMI Logo\texttrademark\xspace, CWM\texttrademark\xspace, CWM Logo\texttrademark\xspace, IIOP\texttrademark\xspace , IMM\texttrademark\xspace , MOF\texttrademark\xspace , OMG Interface Definition Language (IDL)\texttrademark\xspace , and OMG  SysML\texttrademark\xspace\   are trademarks of the Object Management Group. All other products or company names mentioned are used for identification purposes only, and may be trademarks of their respective owners.
+
+C\rtm, CORBA\rtm, CORBA logos\rtm, FIBO\rtm, Financial Industry Business Ontology\rtm, FINANCIAL INSTRUMENT GLOBAL IDENTIFIER\rtm,  IIOP\rtm, IMM\rtm, Model Driven Architecture\rtm, MDA\rtm, Object Management Group\rtm, OMG\rtm, OMG Logo\rtm, SoaML\rtm, SOAML\rtm, SysML\rtm, UAF\rtm, Unified Modeling Language\rtm, UML\rtm, UML Cube logo\rtm, VSIPL\rtm, and XMI\rtm are registered trademarks of the Object Management Group, Inc. 
+
+For a complete list of trademarks, see: \url{http://www.omg.org/legal/tm_list.htm}. All other products or company names mentioned are used for identification purposes only, and may be trademarks of their respective owners.
 
 \OMGparagraph{COMPLIANCE}
-The copyright holders listed above acknowledge that the Object Management Group (acting itself or through its designees) is and shall at all times be the sole entity that may authorize developers, suppliers and sellers of computer
- software to use certification marks, trademarks or other special designations to indicate compliance with these materials.
-Software developed under the terms of this license may claim compliance or conformance with this specification if and only if the software compliance is of a nature fully matching the applicable compliance points as stated in the
- specification. Software developed only partially matching the applicable compliance points may claim only that the software was based on this specification, but may not claim compliance or conformance with this
-  specification. In the event that testing suites are implemented or approved by Object Management Group, Inc., software developed using this specification may claim compliance or conformance with the specification only if the software
-   satisfactorily completes the testing suites.
+The copyright holders listed above acknowledge that the Object Management Group (acting itself or through its designees) is and shall at all times be the sole entity that may authorize developers, suppliers and sellers of computer software to use certification marks, trademarks or other special designations to indicate compliance with these materials.
+Software developed under the terms of this license may claim compliance or conformance with this specification if and only if the software compliance is of a nature fully matching the applicable compliance points as stated in the specification. Software developed only partially matching the applicable compliance points may claim only that the software was based on this specification, but may not claim compliance or conformance with this specification. In the event that testing suites are implemented or approved by Object Management Group, Inc., software developed using this specification may claim compliance or conformance with the specification only if the software satisfactorily completes the testing suites.
+
 
 
 \newpage 
-\OMGparagraph{\large{\textbf{OMG's Issue Reporting Procedure}}}
-All OMG specifications are subject to continuous review and improvement. As part of this process 
-we encourage readers to report any ambiguities, inconsistencies, or inaccuracies
-they may find by completing the Issue Reporting Form listed on the main web page
-\url{http://www.omg.org}, under Documents, Report a Bug/Issue (\url{http://www.omg.org/technology/agreement.htm}).
+\OMGparagraph{OMG's Issue Reporting }
+All OMG specifications are subject to continuous review and improvement. As part of this process we encourage readers to report any ambiguities, inconsistencies, or inaccuracies they may find by completing the Issue Reporting Form listed on the main web page \url{http://www.omg.org}, under Documents, Report a Bug/Issue \newline(\url{http://www.omg.org/report_issue.htm}).
 
-\newpage
+% \newpage
+% $ $
+% \newpage
 
+\cleardoublepage
 \renewcommand{\contentsname}{Table of Contents}
 \tableofcontents
 
