preface changes part 1

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -513,7 +513,7 @@ author=,date=,id=,replyto=,type=}{}%
 \newcommand{\termdefinitionLight}[2]{\textbf{#1} #2}
 \newcommand{\nisref}[1]{#1}
 \renewcommand{\subjectfield}[1]{} % {#1}
-\renewcommand{\normannex}[1]{ \sclause{Annex: #1} \normative}
+%\renewcommand{\normannex}[1]{ \sclause{Annex: #1} \normative}
 %\renewcommand{\infannex}[1]{\sclause{Annex: #1}  \informative }
 \renewenvironment{definitions}[0]{\medskip }{}
 \renewenvironment{note}[0]{\ \\ \textsc{Note} \quad}{}
@@ -730,13 +730,22 @@ All OMG specifications are subject to continuous review and improvement. As part
 \sclause*{OMG}
 \addcontentsline{toc}{sclause}{OMG}
 
+Founded in 1989, the Object Management Group, Inc. (OMG) is an open membership, not-for-profit 
+computer industry standards consortium that produces and maintains computer industry specifications 
+for interoperable, portable, and reusable enterprise applications in distributed, heterogeneous 
+environments. Membership includes Information Technology vendors, end users, government agencies, 
+ and academia. 
+ 
+OMG member companies write, adopt, and maintain its specifications following a mature, open 
+ process. OMG's specifications implement the Model Driven Architecture\textregistered \xspace 
+ (MDA\textregistered\xspace), maximizing ROI 
+  through a full-lifecycle approach to enterprise integration that covers multiple operating 
+   systems, programming languages, middleware and networking infrastructures, and software 
+    development environments. OMG's specifications include: UML\textregistered\xspace (Unified Modeling Language\texttrademark\xspace); 
+	 CORBA\textregistered\xspace (Common Object Request Broker Architecture); CWM\texttrademark\xspace (Common Warehouse Metamodel); and 
+	  industry-specific standards for dozens of vertical markets. 
+More information on the OMG is available at \url{http://www.omg.org/}.
 
-Founded in 1989, the Object Management Group, Inc. (OMG) is an open membership, not-for-profit computer industry standards consortium that produces and maintains computer industry specifications for interoperable, portable, and
- reusable enterprise applications in distributed, heterogeneous environments. Membership includes Information Technology vendors, end users, government agencies, and academia. 
-
-OMG member companies write, adopt, and maintain its specifications following a mature, open process. OMG's specifications implement the Model Driven Architecture\textregistered\xspace (MDA\textregistered\xspace), maximizing ROI through a full-lifecycle approach to enterprise integration that covers multiple operating systems, programming languages, middleware and networking infrastructures, and software development environments. OMG's specifications include: UML\textregistered\xspace (Unified Modeling Language\texttrademark\xspace); CORBA\textregistered\xspace (Common Object Request Broker Architecture); CWM\texttrademark\xspace (Common Warehouse Metamodel); and industry-specific standards for dozens of vertical markets.
-
-More information on the OMG is available at http://www.omg.org/.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -746,28 +755,28 @@ More information on the OMG is available at http://www.omg.org/.
 \addcontentsline{toc}{sclause}{OMG Specifications}
 
 
-As noted, OMG specifications address middleware, modeling and vertical domain frameworks. All OMG Specifications are available from the OMG website at:
-
+As noted, OMG specifications address middleware, modeling and vertical domain frameworks. All OMG Specifications are available from the OMG website at:\newline
 \url{http://www.omg.org/spec}
 
 \noindent Specifications are organized by the following categories:
-\begin{itemize}
+\textbf{
+\begin{itemize}[leftmargin=*, label={}, topsep=0pt]
 	\item  Business Modeling Specifications
 	\item Middleware Specifications
-	\begin{itemize}
+	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
 		\item CORBA/IIOP
 		\item Data Distribution Services
 		\item Specialized CORBA
 	\end{itemize}				
 	\item IDL/Language Mapping Specifications
 	\item Modeling and Metadata Specifications
-	\begin{itemize}	
+	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]	
 		\item UML, MOF, CWM, XMI
 		\item UML Profile										
 	\end{itemize}			
 	\item Modernization Specifications
 	\item Platform Independent Model (PIM), Platform Specific Model (PSM), Interface Specifications
-	\begin{itemize}	
+	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]	
 		\item CORBAServices
 		\item CORBAFacilities
 	\end{itemize}			
@@ -775,22 +784,20 @@ As noted, OMG specifications address middleware, modeling and vertical domain fr
 	\item CORBA Embedded Intelligence Specifications
 	\item CORBA Security Specifications
 \end{itemize}	
+}
 
-\bigskip 
+\medskip 
 \noindent
-
 All of OMG's formal specifications may be downloaded without charge from our website. (Products implementing OMG specifications are available from
  individual suppliers.) Copies of specifications, available in PostScript and
  PDF format, may be obtained from the Specifications Catalog cited above or by contacting the Object Management Group, Inc. at:
 
 
 
-\bigskip
+\medskip
 \noindent 
-
 OMG Headquarters \\
-140 Kendrick Street \\
-Building A, Suite 300 \\
+109 Highland Avenue \\
 Needham, MA 02494 \\
 USA\\
 Tel: +1-781-444-0404\\
