Typographic conventions section fixed

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -818,26 +818,34 @@ The type styles shown below are used in this document to distinguish
  not used in tables or section headings where no distinction is necessary.
 
 
-
+% normal text  
+% texttt{} fuer code
+% bold texttt fuer keywords 
+% lstlisting for grammar
 \medskip \noindent
-Times/Times New Roman - 10 pt.:  Standard body text
+Computer Modern Roman -- 10 pt.: Standard body text
+
+\lstinline{Computer Modern Typewriter -- 10 pt.}: DOL code and DOL syntax elements
+
+\textbf{\lstinline{Computer Modern Typewriter -- 10 pt. Bold}}: keywords in DOL code
 
 
-\medskip \noindent
-{\fontencoding{T1}\fontfamily{phv}\fontseries{b}\fontshape{n}\selectfont
-Helvetica/Arial - 10 pt. Bold: } OMG Interface Definition Language (OMG IDL)
-and syntax elements.
-
-\medskip \noindent
-\texttt{\textbf {Courier - 10 pt. Bold:}}  Programming language elements.
-
-\medskip \noindent
-{\fontencoding{T1}\fontfamily{phv}\fontseries{m}\fontshape{n}\selectfont
-Helvetica/Arial - 10 pt.: } Exceptions
-
-\medskip\noindent
-NOTE: Italic text represents names defined in the specification or the name of
- a document, specification, or other publication. 
+%
+% \medskip \noindent
+% {\fontencoding{T1}\fontfamily{phv}\fontseries{b}\fontshape{n}\selectfont
+% Helvetica/Arial - 10 pt. Bold: } OMG Interface Definition Language (OMG IDL)
+% and syntax elements.
+%
+% \medskip \noindent
+% \texttt{\textbf {Courier - 10 pt. Bold:}}  Programming language elements.
+%
+% \medskip \noindent
+% {\fontencoding{T1}\fontfamily{phv}\fontseries{m}\fontshape{n}\selectfont
+% Helvetica/Arial - 10 pt.: } Exceptions
+%
+% \medskip\noindent
+% NOTE: Italic text represents names defined in the specification or the name of
+%  a document, specification, or other publication.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
