moved wrong curly brace

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -41,9 +41,9 @@
 %\voffset 1cm
 
 
-\setcounter{secnumdepth}{4
+\setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{4}
-\def\toclevel@subsubsection{4}}
+\def\toclevel@subsubsection{4}
  
 \usepackage{changebar}
 
